[gd_scene load_steps=2 format=3 uid="uid://ddgbtlptcxsdh"]

[ext_resource type="Script" path="res://Components/InteractionAreaComponent.gd" id="1_x63dd"]

[node name="InteractionAreaComponent" type="Area2D"]
script = ExtResource("1_x63dd")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
